<resources>
    <!-- Global -->
    <string name="app_name">Griffin</string>
    <string name="base_url">https://team5-tcss450-server.herokuapp.com/</string>

    <string name="string_global_logoDescription">Griffin Logo</string>
    <string name="email_global_emailHint">Email</string>
    <string name="password_global_passwordHint">Password</string>
    <string name="password_global_retypePasswordHint">Retype Password</string>

    <!-- Bottom Menu -->
    <string name="textview_bottomMenu_home">Home</string>
    <string name="textview_bottomMenu_chat">Chat</string>
    <string name="textview_bottomMenu_contacts">Contacts</string>
    <string name="textview_bottomMenu_weather">Weather</string>

    <!-- Home Fragment -->
    <string name="textview_home_welcome">Welcome home!</string>
    <string name="textview_home_forecast">Forecast</string>
    <string name="textview_home_notification">Notifications</string>
    <string name="textview_home_delete">Delete</string>


    <!-- Register Fragment -->
    <string name="textplain_register_lastNameHint">Last Name</string>
    <string name="textplain_register_firstNameHint">First Name</string>
    <string name="textplain_register_usernameHint">Username</string>

    <!-- Forgot Password Fragment -->
    <string name="textview_forgotPassword_textTitle">Password Recovery</string>
    <string name="textview_forgotPassword_description">Enter the email address associated with the
        account and if it exists, an email with password recovery instructions will be sent!</string>
    <string name="email_forgotPassword_emailHint">Email</string>
    <string name="button_forgotPassword_sendRecovery">Send Recovery Link</string>
    <string name="button_forgotPassword_cancel">Cancel</string>
    <string name="title_forgotPassword_dialog">Success!</string>
    <string name="textview_forgotPassword_dialogMessage">If the entered email exists as a user, an email has been sent!, </string>
    <string name="button_forgotPassword_dialogAcknowledge">Acknowledge</string>

    <!-- Login Fragment -->
    <string name="button_login_register">REGISTER</string>
    <string name="button_login_signIn">SIGN-IN</string>
    <string name="button_login_forgotPassword">FORGOT PASSWORD</string>

    <!-- Resend Verification Email Dialog -->
    <string name="title_resendDialog">Unverified Email!</string>
    <string name="textview_resendDialog_description">It appears that the account information you
        entered has not been verified, would you like to resend the verification email?</string>
    <string name="button_resendDialog_resend">Resend Verification!</string>
    <string name="button_resendDialog_cancel">Cancel</string>

    <!-- Settings Menu -->
    <string name="button_settings_theme">Change Theme</string>
    <string name="buttons_setting_changePassword">Change Password</string>

    <!-- Change Theme Fragment -->
    <string name="title_changeTheme">Change Theme</string>
    <string name="button_changeTheme_bluegrey">Blue and Grey Theme</string>
    <string name="button_changeTheme_sonics">Sonics Theme</string>
    <string name="button_changeTheme_uw">UW Theme</string>

    <!-- Change Password Fragment -->
    <string name="title_changePassword">Change Password</string>
    <string name="textview_changePassword_headMessage">Do you want to change your password?</string>
    <string name="textview_changePassword_description">If you accept, an email will be sent containing
        further instructions for changing your password</string>
    <string name="button_changePassword_accept">Accept</string>
    <string name="button_changePassword_cancel">Cancel</string>
    <string name="button_changePassword_change">Save Changes!</string>
    <string name="password_changePassword_oldPasswordHint">Old password</string>
    <string name="password_changePassword_newPasswordHint">New password</string>
    <string name="password_changePassword_newPasswordConfirmHint">Confirm new password</string>

    <!-- Chat -->
    <string name="title_newMessage">New Message</string>
    <string name="title_conversation">Conversation</string>
    <string name="text_conversation_message">Message</string>
    <string name="button_conversation_send">Send</string>
    <string name="string_chat_sendDescription">Sends the message</string>
    <string name="string_chat_messageEntryDescription">Message</string>
    <string name="button_chat_delete">Delete Chat</string>
    <string name="button_chat_goTo">Go To Chat</string>
    <string name="textView_addChat">Add New Chat</string>
    <string name="editText_addChat">Enter a Chat Name</string>
    <string name="dialog_chatListRecycler_title">Confirm Delete?</string>
    <string name="dialog_chatListRecycler_message">Do you wish to delete this conversation from your history? The chat may still exist
    but you will no longer be a part of it.</string>
    <string name="dialog_chatListRecycler_positive">Confirm</string>
    <string name="dialog_chatListRecycler_negative">Cancel</string>

    <string name="textview_addchatname">CHAT NAME ENTRY:</string>
    <string name="textview_addusername">USERNAME ENTRY:</string>
    <string name="editText_addusername">Enter username(s).</string>
    <string name="textview_userentryinstructions">Please use commas when entering more than one user.</string>

    <string name="member_info">Member Info.</string>

    <!-- Contacts -->
    <string name="title_searchContacts">Find New Contacts</string>
    <string name="textplain_contacts_search">Add New Contact</string>
    <string name="textplain_contacts_request">Incoming Requests</string>
    <string name="dialog_contactListRecycler_title">Confirm Delete?</string>
    <string name="dialog_contactListRecycler_message">Do you wish to delete this contact?</string>
    <string name="dialog_contactListRecycler_positive">Confirm</string>
    <string name="dialog_contactListRecycler_negative">Cancel</string>
    <string name="button_contactList_seeMoreDescription">See More</string>
    <string name="button_contactRequest_accept">Accept</string>
    <string name="button_contactRequest_decline">Decline</string>
    <string name="button_contact_delete">Delete Contact</string>

    <!-- Weather -->
    <string name="textview_weatherWeekCard_low">Low</string>
    <string name="textview_weatherWeekCard_high">High</string>
    <string name="textview_weatherCard_temperature">Temperature</string>
    <string name="textview_weatherList_currentForecast">Current Forecast:</string>
    <string name="textview_weatherList_todayForecast">Today\'s Forecast</string>
    <string name="textview_weatherList_weeklyForecast">Weekly Forecast</string>
    <string name="textview_weatherList_location">Location:</string>
    <string name="textview_weatherList_textDefault">Getting Data...</string>
    <string name="label_location">Current location:</string>
    <string name="fragment_weather_map">Map Selection</string>
    <string name="imagelabel_weather_weatherIconDescription">The type of current weather</string>

    <!-- ?? -->
    <string name="icon_imageview">Icon</string>
    <string name="search_text">Search</string>
    <string name="title_activity_maps">Map</string>

    <!-- Auto Sign in -->
    <string name="switch_sign_in">Stay Signed in</string>
    <string name="keys_shared_prefs">My Auth App Shared Prefs</string>
    <string name="keys_prefs_jwt">Sharded Prefs JWT</string>
    <string name="keys_prefs_email">Sharded Prefs Email</string>
    <string name="keys_prefs_memberid">Sharded Prefs MemberID</string>
    <string name="keys_prefs_theme">Sharded Prefs Theme</string>
    <string name="action_sign_out">Sign Out</string>

    <!-- Notifications -->
    <string name="textView_notification_title">Notifications</string>
    <string name="button_notification_clearAll">Clear All</string>
    <string name="notification_newContactMessage"> wants to be your buddy!</string>
    <string name="notification_newMessageTitle">Message From: </string>
    <string name="notification_newNotification">New Notification: </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
