<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterFragment">

    <Button
        android:id="@+id/button_register_acct"
        android:layout_width="137dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:text="@string/button_login_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.868"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_confirmPassword" />

    <EditText
        android:id="@+id/textplain_lastName"
        android:layout_width="335dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/textplain_register_lastNameHint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textplain_firstName"
        android:autofillHints="" />

    <EditText
        android:id="@+id/textplain_firstName"
        android:layout_width="335dp"
        android:layout_height="0dp"
        android:layout_marginTop="31dp"
        android:ems="10"
        android:hint="@string/textplain_register_firstNameHint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_logo"
        android:autofillHints="" />

    <EditText
        android:id="@+id/email_input"
        android:layout_width="335dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/email_global_emailHint"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_username"
        android:autofillHints="" />

    <EditText
        android:id="@+id/textview_username"
        android:layout_width="335dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/textplain_register_usernameHint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textplain_lastName"
        android:autofillHints="" />

    <EditText
        android:id="@+id/password_confirmPassword"
        android:layout_width="335dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/password_global_retypePasswordHint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_password"
        android:autofillHints="" />

    <EditText
        android:id="@+id/password_password"
        android:layout_width="335dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/password_global_passwordHint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_input"
        android:autofillHints="" />

    <ImageView
        android:id="@+id/imageView_logo"
        android:layout_width="285dp"
        android:layout_height="184dp"
        android:layout_marginTop="58dp"
        android:contentDescription="@string/string_global_logoDescription"
        android:src="@drawable/ic_griffin_logo_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>