<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigate_changetheme_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.ChangeThemeFragment">

    <Button
        android:id="@+id/UW_theme_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="149dp"
        android:layout_marginBottom="80dp"
        android:text="@string/button_changeTheme_uw"
        app:layout_constraintBottom_toTopOf="@+id/bluegrey_theme_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bluegrey_theme_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="80dp"
        android:text="@string/button_changeTheme_bluegrey"
        app:layout_constraintBottom_toTopOf="@+id/sonics_theme_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UW_theme_button" />

    <Button
        android:id="@+id/sonics_theme_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="198dp"
        android:text="@string/button_changeTheme_sonics"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bluegrey_theme_button" />
</androidx.constraintlayout.widget.ConstraintLayout>