<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/textview_currentData"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="64dp"
        android:text="@string/textview_weatherList_textDefault"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageicon_weatherIcon"
        app:layout_constraintTop_toBottomOf="@+id/textView_location" />

    <ImageView
        android:id="@+id/imageicon_weatherIcon"
        android:layout_width="54dp"
        android:layout_height="44dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/imagelabel_weather_weatherIconDescription"
        android:src="@drawable/weather_clear_art"
        app:layout_constraintEnd_toStartOf="@+id/textview_currentData"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_location" />

    <TextView
        android:id="@+id/textView_welcome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/textview_home_welcome"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:text="@string/textview_weatherList_textDefault"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_welcome" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/homenotificationslist_root"
        android:layout_width="392dp"
        android:layout_height="500dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layoutManager="LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_clear"
        app:layout_constraintVertical_bias="0.103"
        tools:context="edu.uw.tcss450.griffin.ui.home.HomeNotificationListFragment"
        tools:listitem="@layout/fragment_home_card" />

    <TextView
        android:id="@+id/textView_notification_title"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/textView_notification_title"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/button_clear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_currentData" />

    <Button
        android:id="@+id/button_clear"
        android:layout_width="101dp"
        android:layout_height="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/button_notification_clearAll"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_currentData" />


</androidx.constraintlayout.widget.ConstraintLayout>

