<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.chat.AddChatFragment">

    <EditText
        android:id="@+id/editText_enterChatName_addchatfragment"
        android:layout_width="360dp"
        android:layout_height="58dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/editText_addChat"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView_addUser_addchatfragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_addChat_addchatfragment" />

    <ImageButton
        android:id="@+id/imageButton_addChat_addchatfragment"
        android:layout_width="360dp"
        android:layout_height="59dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="205dp"
        android:src="@drawable/add_button_circle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_enterUser" />

    <EditText
        android:id="@+id/editText_enterUser"
        android:layout_width="360dp"
        android:layout_height="58dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:hint="@string/editText_addusername"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageButton_addChat_addchatfragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_userentryinstructions" />

    <TextView
        android:id="@+id/textView_addChat_addchatfragment"
        android:layout_width="360dp"
        android:layout_height="58dp"
        android:layout_marginTop="129dp"
        android:layout_marginBottom="8dp"
        android:text="@string/textview_addchatname"
        android:textColor="@color/colorPrimaryDark_BG"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editText_enterChatName_addchatfragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_addUser_addchatfragment"
        android:layout_width="360dp"
        android:layout_height="58dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="4dp"
        android:text="@string/textview_addusername"
        android:textColor="@color/colorPrimaryDark_BG"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView_userentryinstructions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_enterChatName_addchatfragment" />

    <TextView
        android:id="@+id/textView_userentryinstructions"
        android:layout_width="360dp"
        android:layout_height="30dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="8dp"
        android:text="@string/textview_userentryinstructions"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark_BG"
        app:layout_constraintBottom_toTopOf="@+id/editText_enterUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_addUser_addchatfragment" />


</androidx.constraintlayout.widget.ConstraintLayout>